--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.13",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "axios": "^1.1.3",
     "expo": "~47.0.3",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~11.0.1",
