--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.4",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "axios": "^1.1.3",
@@ -24,6 +27,7 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-offline": "^6.0.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.4.1",
