--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/netinfo": "^9.3.6",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -25,9 +26,12 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-offline": "^6.0.0",
+    "react-native-reanimated": "^2.12.0",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.4.1",
