--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.1.3",
     "expo": "~47.0.3",
     "expo-app-loading": "~2.1.0",
+    "expo-dev-client": "~2.0.0",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
